force-app/main/default/src/objects/HealthCloudGA__HealthCloudSetting__mdt/HealthCloudGA__HealthCloudSetting__mdt.object-meta.xml
<CustomObject>
    <description>A generic dictionary for Health Cloud specific app configuration key value pairs.</description>
    <label>Health Cloud Setting</label>
    <pluralLabel>Health Cloud Settings</pluralLabel>
</CustomObject>