force-app/main/default/src/objects/HealthCloudGA__HealthCloudSetting__mdt/fields/HealthCloudGA__Active__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this config record should be used.</description>
    <inlineHelpText>Whether this config record should be used.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>