force-app/main/default/src/objects/HealthCloudGA__HealthCloudSetting__mdt/fields/HealthCloudGA__SettingName__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__SettingName__c</fullName>
    <description>The name of this config setting. See documentation for the exact name of specific settings.</description>
    <inlineHelpText>The name of this config setting. See documentation for the exact name of specific settings.</inlineHelpText>
    <label>Setting Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>